# financial-sentiment-analysis-spring-2026

./: .env.example  .gitignore  CORRECTED_RESULTS.md  DATA_LEAKAGE_FIX.md  FINAL_CORRECTED_RESULTS.md  FINAL_RESULTS_WITH_REAL_SENTIMENT.md  FOR_TEAMMATE.md  README.md  README.tx  README.txt  README_TRANSFORMER.md  financial-paper.tex  pyproject.toml  requirements.txt
data/: get_data.ipynb
data/processed/: README.md  combined_sentiment_2026.csv  stocktwits_api_daily_sentiment_2026_full.csv  stocktwits_daily_sentiment_kaggle_roberta.csv
docs/: 30_day_backfill.md  COMPREHENSIVE_PAPER.tex  DEEP_LEARNING_PROJECT_REPORT.md  EVERYTHING_WE_TRIED.md  FINAL_PAPER.aux  FINAL_PAPER.out  FINAL_PAPER.tex  FINAL_PAPER_CORRECTED.tex  Transformer_paper.tex
model_checkpoints/: gru_5d_return_best.pt  gru_smoke_best.pt  gru_tuned_5d_return_best.pt  lstm_5d_return_best.pt  lstm_best.pt  lstm_tuned_5d_return_best.pt
model_checkpoints/final/: gru_combined_multitask_tuned_2020-01-01_to_2022-02-28_v4_purged_rawtech_labeled_sentiment_multitask_best.pt  (+10 more)
reports/: gru_smoke_best.json
scripts/: run_v5_tuning_grid.py  run_v6_1d_tuning_grid.py  run_v6_tuning_grid.py  train_lstm_with_combined_sentiment.py  train_transformer_model.py
src/: __init__.py  cli.py  collect_feature_subset_results.py  config.py  pipeline.py  plot_feature_subset_results.py  run_feature_ablation.py  run_ridge_baseline.py  train.py  train_gru.py  train_lstm.py  tune_feature_subset.py  tune_gru.py  tune_lstm.py  tune_multitask.py  tune_transformer.py  tune_transformer_by_ticker.py
src/data_sources/: market_data.py  (+1 more)
(+196 files in other folders)
